src/io/dkozak/formatextractor/Set.g4
grammar Set;

set
    : '{' '}' # emptySet
    | '{' elem (',' elem)* '}' # nonEmptySet
    ;

elem
    : simpleElement
    | set
    ;

simpleElement : ELEM;

ELEM
    : ('A'..'Z' | 'a'..'z' | '0'..'9' |  '_')+
    ;

WS : [ \t\r\n]+ -> skip ;
